tests/invalidTest/other/const_const_unvalid_type8.q
# EXPECT type cannot be converted
def void errorType(){
    sint8 a = 128
}